<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bitmap2">


    <LinearLayout
        android:id="@+id/fragment_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/rounded_shape_5"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="44dp">

    <TextView
        android:id="@+id/courseID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_id"
        android:textColor="@color/Brown"
        android:layout_marginStart="1dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="14dp"/>
    <TextView
        android:id="@+id/coursetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_time"
        android:textColor="@color/Brown"
        android:layout_marginStart="1dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="14dp"/>
    <TextView
        android:id="@+id/classroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classroom"
        android:textColor="@color/Brown"
        android:layout_marginStart="1dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="14dp"/>
    <TextView
        android:id="@+id/instructor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/instructor"
        android:textColor="@color/Brown"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="14dp"/>
    <TextView
        android:id="@+id/credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit"
        android:textColor="@color/Brown"
        android:layout_marginStart="1dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="14dp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/Brown"
        android:layout_marginStart="1dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="14dp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>